# graph-core

./: .clang-format  .gitignore  CMakeLists.txt  MANUAL_USUARIO.md  Makefile  PLAN_MEJORA_GRAPHORE.md  README.es.md  README.md  aerografos_guia.md  build-all.sh  cambio.md  idea.md  imgui.ini  mingw-toolchain.cmake  recover.sh  ya.md
.agents/: PROGRESO_IMPLEMENTACION.md  plan_implementacion_completo.md
.atl/: .skill-registry.cache.json  skill-registry.md
.github/workflows/: ci.yml
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
muestras/: Grafo_Desargues.json  Grafo_Dodecaedro.json  Grafo_Petersen.json  Muestra_Anillo_Enlazado.json  Muestra_Arbol_BFS.json  Muestra_Dijkstra_Caminos.json  Muestra_Estrella_Doble.json  Muestra_ForceAtlas_Magia.json  Muestra_Fractal_Sierpinski.json  Muestra_Turquesa_Geometrico.json  arbol_binario.json  arbol_jerarquico.json  grafo_100_nodos_completo.json  grafo_anillo_atajos.json  grafo_arbol_binario.json  grafo_bipartito.json  grafo_bipartito_completo.json  grafo_completo.json  grafo_escala_libre_hubs.json  grafo_estrella_masiva.json  grafo_exotico_espiral.json  grafo_grid_dijkstra.json  grafo_intermedio_anillos.json  grafo_islas_clusters.json  grafo_malla.json  grafo_normal_1.json  grafo_normal_2.json  grafo_real_200.json  grafo_real_300.json  red_corporativa.json  test_250_nodos_todos_cero.json
openspec/: config.yaml
openspec/changes/refactor-interfaz/: design.md  proposal.md  spec.md  tasks.md
scripts/: build.sh  clean.sh  package.sh  test.sh
src/: main.cpp  portable-file-dialogs.h
src/audio/: Sonidos.cpp  Sonidos.h  Sonidos.hpp  miniaudio_impl.cpp
src/interfaz/: Interfaz.cpp  Interfaz.h  Interfaz.hpp
src/interfaz/componentes/: Dialogos.cpp  Dialogos.h  Dialogos.hpp  LogPanel.h  MenuPrincipal.cpp  MenuPrincipal.h  MenuPrincipal.hpp  StatusBar.cpp  StatusBar.h  StatusBar.hpp  Toolbar.cpp  Toolbar.h  Toolbar.hpp
src/interfaz/estado/: EstadoAeroGrafos.cpp  EstadoAeroGrafos.h  EstadoAeroGrafos.hpp  EstadoGrafos.h  EstadoGrafos.hpp  EstadoRedes.h  EstadoRedes.hpp  EstadoUI.h  EstadoUI.hpp
src/interfaz/lienzo/: LienzoAeroGrafos.cpp  LienzoAeroGrafos.h  LienzoAeroGrafos.hpp  LienzoRed.cpp  LienzoRed.h  LienzoRed.hpp
src/interfaz/paneles/: Matrices.cpp  Matrices.h  Matrices.hpp  PanelAeroGrafos.cpp  PanelAeroGrafos.h  PanelAeroGrafos.hpp  PanelGrafos.cpp  PanelGrafos.h  PanelGrafos.hpp  PanelHardware.h  PanelHardware.hpp  PanelIsomorfismo.cpp  PanelIsomorfismo.h  PanelIsomorfismo.hpp  PanelRed.h
src/interfaz/util/: Animacion.cpp  Animacion.h  Animacion.hpp  AnimacionCarga.cpp  AnimacionCarga.hpp  AnimacionUI.cpp  AnimacionUI.h  AnimacionUI.hpp  AtajosTeclado.cpp  AtajosTeclado.h  AtajosTeclado.hpp  Colores.h  Colores.hpp  Easing.h  Easing.hpp  ExportadorPNG.cpp  ExportadorPNG.hpp  TextureLoader.h  TextureLoader.hpp  stb_image_impl.cpp
src/interfaz/ventanas/: VentanaAyuda.cpp  VentanaAyuda.h  VentanaAyuda.hpp
src/nucleo/: Grafo.cpp  Grafo.h  Grafo.hpp  Grafo_old.h  HistorialGrafos.h  HistorialGrafos.hpp  Plantillas.cpp  Plantillas.hpp  SimuladorRed.cpp  SimuladorRed.h  SimuladorRed.hpp  Topologias.cpp  Topologias.h  Topologias.hpp  UnionFind.hpp
src/nucleo/algoritmos/: AnalizadorGrafo.cpp  AnalizadorGrafo.h  AnalizadorGrafo.hpp  Arbol.cpp  Arbol.h  Arbol.hpp  BFS.cpp  BFS.h  BFS.hpp  Ciclos.cpp  Ciclos.h  Ciclos.hpp  ColorFractal.cpp  ColorFractal.h  ColorFractal.hpp  Coloreo.cpp  Coloreo.h  Coloreo.hpp  DFS.cpp  DFS.h  DFS.hpp  Dijkstra.cpp  Dijkstra.h  Dijkstra.hpp  EulerHamilton.cpp  EulerHamilton.h  EulerHamilton.hpp  ForceAtlas2.cpp  ForceAtlas2.h  ForceAtlas2.hpp  Isomorfismo.cpp  Isomorfismo.h  Isomorfismo.hpp  Kruskal.cpp  Kruskal.h  Kruskal.hpp  Planaridad.cpp  Planaridad.h  Planaridad.hpp  QuadTree.cpp  (+5 more)
src/nucleo/datos/: DatosMundo.cpp  DatosMundo.h  DatosMundo.hpp
src/nucleo/tipos/: Anotacion.hpp  Arista.hpp  EstadoRed.h  EstadoRed.hpp  Nodo.h  Nodo.hpp  PasoAnimacion.h  PasoAnimacion.hpp  TipoHardware.hpp
src/persistencia/: SerializadorGEXF.h  SerializadorGEXF.hpp  SerializadorJSON.h  SerializadorJSON.hpp
tests/: test_bfs.cpp  test_ciclos.cpp  test_dijkstra.cpp  test_grafo.cpp  test_simulador.cpp  test_unionfind.cpp
